# simple-ssg

./: .gitignore  LICENSE  README.md  check_imports.py  check_package.py  make-executable.sh  make_scripts_executable.py  output.txt  pyproject.toml  run_and_capture.py  run_code_quality.py  run_validation.py  setup.py  validate_for_publishing.py
.github/workflows/: release.yml  tests.yml
docs/: README.md  getting-started.md  integration-guide.md  structure.md
examples/: README.md
examples/basic-website/: README.md  config.yaml  index.html  template.html
examples/basic-website/content/: 404.md  about.md  contact.md  index.md
examples/basic-website/css/: styles.css
simple_ssg/: __init__.py  __main__.py  builder.py  cli.py  config.py
simple_ssg/converters/: __init__.py  html.py  markdown.py
simple_ssg/enhancers/: __init__.py  minifier.py  seo.py  server.py
simple_ssg/utils/: __init__.py  fs.py  templates.py
tests/: README.md  test_builder.py  test_config.py  test_converters.py
tests/fixtures/: test_content.md  test_template.html
